[tool.poetry]
name = "imgtopdfeasy"
version = "0.3.0"
description = "This is command line utility to convert images in a directory to  PDF file."
authors = ["Naveen <naveen521kk@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/naveen521kk/img2pdf"

[tool.poetry.dependencies]
python = "^3.6"
Pillow = "^8"

[tool.poetry.plugins] # Optional super table
[tool.poetry.plugins."console_scripts"]
"img2pdf" = "imgtopdfeasy:main"

[tool.poetry.dev-dependencies]
pytest = "^6.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
